WIP contd: adding media screen to css

--- a/index.html
+++ b/index.html
@@ -120,13 +120,13 @@ pdf" target="_blank"> emissions </a> data, either per capita (default) or per un
         <div class="row">
           
             <div class="col-lg-2 .barChartTitle" 
-                 style='position: relative; left: 12px; text-align: left; border:none; 
-                 font-weight:bold; color: #565656;'>
+                 style='position: relative; left: 17px; text-align: left; border:none; 
+                        font-weight:bold; color: #565656;'>
                  USA
             </div>
             <div class="col-lg-2 .barChartTitle" 
                  style='position: relative; left: 682px; top: 0px;text-align: left; border:none;
-                 font-weight:bold; color: #565656;'>
+                        font-weight:bold; color: #565656;'>
                  Asia
             </div>
             <div id="barChart_USAAsia"></div>
@@ -134,9 +134,36 @@ pdf" target="_blank"> emissions </a> data, either per capita (default) or per un
         </div>
 
         <div class="row">
-            <div class="barChartTitle">
-              Europe &#183; Canada &#183; Aus &#183; NZ &#183; Latin Amer &#183; Africa
+            <div class="col-lg-2 .barChartTitle" 
+                 style='position: relative; left: 17px; top: 0px; text-align: left; border:none; 
+                        font-weight:bold; color: #565656;'>
+              Europe
             </div>
+     <!--        <div class="col-lg-2 .barChartTitle"
+                 style='position: relative; left: 308px; top: 13px; text-align: left; border:none; 
+                        font-weight:bold; color: #565656;'>
+              Canada
+            </div> -->
+            <div id="headingCan" style="position:relative; left: -139px;">
+              Canada
+            </div>
+           <!--  <div class="col-lg-2 .barChartTitle" 
+                 style='position: relative; left: 275px; top: 71px; text-align: left; border:none; 
+                        font-weight:bold; color: #565656;'>
+              Aus &#183; N.Z.
+            </div>
+             <div class="col-lg-2 .barChartTitle" 
+                 style='position: relative; left: 174px; top: 71px; text-align: left; border:none; 
+                        font-weight:bold; color: #565656;'>
+              Latin America
+            </div>
+            <div class="col-lg-2 .barChartTitle" 
+                 style='position: relative; left: 259px; top: 71px; text-align: left; border:none; 
+                        font-weight:bold; color: #565656;'>
+              Africa
+            </div> -->
+
+            <!-- barChart svg -->
             <div id="barChart_EUCWLatAmerAfrica"></div>
    
         </div> <!-- ./sub-row USA chart -->
