WIP contd: divs with no col class

--- a/index.html
+++ b/index.html
@@ -134,18 +134,19 @@ pdf" target="_blank"> emissions </a> data, either per capita (default) or per un
         </div>
 
         <div class="row">
-            <div class="col-lg-2 .barChartTitle" 
+         <!--    <div class="col-lg-2 .barChartTitle" 
                  style='position: relative; left: 17px; top: 0px; text-align: left; border:none; 
                         font-weight:bold; color: #565656;'>
               Europe
-            </div>
-     <!--        <div class="col-lg-2 .barChartTitle"
-                 style='position: relative; left: 308px; top: 13px; text-align: left; border:none; 
-                        font-weight:bold; color: #565656;'>
-              Canada
             </div> -->
-            <div id="headingCan" style="position:relative; left: -139px;">
+            <div id="headingEU" class="headingClass" style="position:relative; left: 31px;top: 57px;">
+              Europe
+            </div>
+            <div id="headingCan" class="headingClass" style="position:relative; left: 318px;top: 42px;">
               Canada
+            </div>
+            <div id="headingOceania" class="headingClass" style="position:relative; left: 677px; top: 62px;">
+              Aus &#183; N.Z.
             </div>
            <!--  <div class="col-lg-2 .barChartTitle" 
                  style='position: relative; left: 275px; top: 71px; text-align: left; border:none; 
