--- a/index.html
+++ b/index.html
@@ -139,13 +139,14 @@ pdf" target="_blank"> emissions </a> data, either per capita (default) or per un
                         font-weight:bold; color: #565656;'>
               Europe
             </div> -->
-            <div id="headingEU" class="headingClass" style="position:relative; left: 31px;top: 57px;">
+            <div id="headingEU" class="headingClass" style="max-width=100px; margin:auto; border: 3px solid green; position:relative; left: 31px;top: 57px;">
               Europe
             </div>
-            <div id="headingCan" class="headingClass" style="position:relative; left: 318px;top: 42px;">
+            <div id="headingCan" class="headingClass" style="max-width=100px; margin:auto; border: 3px solid
+            green; position:relative; left: 318px;top: 42px;">
               Canada
             </div>
-            <div id="headingOceania" class="headingClass" style="position:relative; left: 677px; top: 62px;">
+            <div id="headingOceania" class="headingClass" style="max-width=200px; margin:auto; border: 3px solid green; position:relative; padding-left: 200px; left: 475px; top: 2px;">
               Aus &#183; N.Z.
             </div>
            <!--  <div class="col-lg-2 .barChartTitle" 
