WIP contd: using bootstrap cols

--- a/index.html
+++ b/index.html
@@ -139,15 +139,30 @@ pdf" target="_blank"> emissions </a> data, either per capita (default) or per un
                         font-weight:bold; color: #565656;'>
               Europe
             </div> -->
-            <div id="headingEU" class="headingClass" style="max-width=100px; margin:auto; border: 3px solid green; position:relative; left: 31px;top: 57px;">
-              Europe
+            <div class="col-lg-5">
+              <div id="headingEU" class="headingClass" >
+                Europe
+              </div>
             </div>
-            <div id="headingCan" class="headingClass" style="max-width=100px; margin:auto; border: 3px solid
-            green; position:relative; left: 318px;top: 42px;">
-              Canada
+            <div class="col-lg-1">
+              <div id="headingCan" class="headingClass">
+                Canada
+              </div>
             </div>
-            <div id="headingOceania" class="headingClass" style="max-width=200px; margin:auto; border: 3px solid green; position:relative; padding-left: 200px; left: 475px; top: 2px;">
-              Aus &#183; N.Z.
+            <div class="col-lg-2">
+              <div id="headingOceania" class="headingClass">
+                Aus &#183; N.Z.
+              </div>
+            </div>
+            <div class="col-lg-2">
+              <div id="headingLatinAmer" class="headingClass">
+                Latin America
+              </div>
+            </div>
+            <div class="col-lg-2">
+              <div id="headingAfrica" class="headingClass">
+                Africa
+              </div>
             </div>
            <!--  <div class="col-lg-2 .barChartTitle" 
                  style='position: relative; left: 275px; top: 71px; text-align: left; border:none; 
