WIP padding left

--- a/index.html
+++ b/index.html
@@ -139,12 +139,12 @@ pdf" target="_blank"> emissions </a> data, either per capita (default) or per un
                         font-weight:bold; color: #565656;'>
               Europe
             </div> -->
-            <div class="col-lg-5">
+            <div class="col-lg-4">
               <div id="headingEU" class="headingClass" >
                 Europe
               </div>
             </div>
-            <div class="col-lg-1">
+            <div class="col-lg-2">
               <div id="headingCan" class="headingClass">
                 Canada
               </div>
@@ -154,13 +154,13 @@ pdf" target="_blank"> emissions </a> data, either per capita (default) or per un
                 Aus &#183; N.Z.
               </div>
             </div>
-            <div class="col-lg-2">
-              <div id="headingLatinAmer" class="headingClass">
+            <div class="col-lg-3">
+              <div id="headingLatinAmer" class="headingClass" style="position: relative; left: -25px;">
                 Latin America
               </div>
             </div>
-            <div class="col-lg-2">
-              <div id="headingAfrica" class="headingClass">
+            <div class="col-lg-1">
+              <div id="headingAfrica" class="headingClass" style="position: relative; left: -37px;">
                 Africa
               </div>
             </div>
@@ -224,6 +224,7 @@ var cityName_array = [];
 var div = d3.select("body").append("div")
     .attr("class", "tooltip")
     .style("opacity", 0);
+
 
 // ----------------------------------------------------
 // Code
