--- a/index.html
+++ b/index.html
@@ -770,32 +770,22 @@ function emissionsBarChart(geogroup_name, geogroup_id) {
   }
 
   //svg chart titles
-  //if (geogroup_name === "groupEUCWLatAmerAfrica") fn_labelbarCharts();
-  var svgTitle = d3.select("#barChart_EUCWLatAmerAfrica").select(".barSVG")
-          .append("g").append("svg")
-          .attr('width', 200)
-          .attr('height', 200)
-          .attr("transform", "translate(" + 258 + "," + -60 + ")")
-          .append("text").attr("class", "headingClass");
+  // //if (geogroup_name === "groupEUCWLatAmerAfrica") fn_labelbarCharts();
+  // var svgTitle = d3.select("#barChart_EUCWLatAmerAfrica").select(".barSVG")
+  //         .append("g").append("svg")
+  //         .attr('width', 200)
+  //         .attr('height', 200)
+  //         .attr("transform", "translate(" + 258 + "," + -60 + ")")
+  //         .append("text").attr("class", "headingClass");
 
   // svgTitle.text("Canada")
-  //   .style("fill", "#565656")
   //   .attr("transform", function (d) { //adjust arrow proportions
   //       var xscale = 0.5, yscale = 1.9;         
         
   //       return "scale(" + xscale + " " + yscale + ")" + 
   //             "translate(" + 109 + " " + 18 + ")" ;       
-  //     })
-  //   .style("font-size", "17px")
-  //   .style("font-weight", "bold");
-
-  svgTitle.text("Canada")
-    .attr("transform", function (d) { //adjust arrow proportions
-        var xscale = 0.5, yscale = 1.9;         
-        
-        return "scale(" + xscale + " " + yscale + ")" + 
-              "translate(" + 109 + " " + 18 + ")" ;       
-      });
+  //     });
+  if (geogroup_name === "groupEUCWLatAmerAfrica") fn_svgHeadings(geogroup_id);
 
 } // ./fn emissionsBarChart()
 
