--- a/index.html
+++ b/index.html
@@ -585,7 +585,8 @@ function emissionsBarChart(geogroup_name, geogroup_id) {
     .scale(y)
     .ticks(5)
     .tickFormat(function(d) {
-      return this_dim === label_dataPerGDP ? formatDecimalk(d) : d;
+      return this_dim === label_dataPerGDP ? (formatDecimalSci(d)*100)/100 : d;
+      // return d;
     }); 
 
   //https://mathisonian.com/writing/easy-responsive-svgs-with-viewbox
@@ -595,7 +596,7 @@ function emissionsBarChart(geogroup_name, geogroup_id) {
 
   //Fit barCharts responsively using viewBox
   //NB: viewBox stretches text labels as well, so they must be fixed later by adjusting the scale
-  my_width = "100%";
+  my_width = "99%";
   var svgBarChart = d3.select(geogroup_id).append("svg").attr("class", "barSVG")
     .attr('width', my_width)
     .attr('height', 125) // height)
@@ -622,8 +623,9 @@ function emissionsBarChart(geogroup_name, geogroup_id) {
       if (geogroup_name === "groupUSAAsia") same_max = 20;
       else  same_max = 11;      
     } else {
-      if (geogroup_name === "groupUSAAsia") same_max = 250000;
-      else same_max = 300000; //same_max = d[this_dim];
+      if (geogroup_name === "groupUSAAsia") same_max = 0.12; //250000;
+      else same_max = 0.2;//300000; //same_max = d[this_dim];
+      //same_max = 0.35; //0.8; //[kgCO2/USD]
     }
 
     return same_max;
