WIP: city name labels for emissions/gdp

--- a/index.html
+++ b/index.html
@@ -309,7 +309,8 @@ d3.tsv("data/cityApp_attributes.tsv", function(ghg) {
   emissionsBarChart("groupEUCWLatAmerAfrica", "#barChart_EUCWLatAmerAfrica");
 
 });
-
+// //Customize some city names
+// data_GHG.find(x => x.city.includes("District of Columbia")).city = "D.C."
 
 // ----------------------------------------------------
 // Main Functions
