--- a/index.html
+++ b/index.html
@@ -707,23 +707,39 @@ function emissionsBarChart(geogroup_name, geogroup_id) {
           .attr("class", "xAxisCityName")
           .attr("transform", function (d, i) {
             // console.log("this_dim: ", this_dim)
-            thisCity = d3.select(this).attr("id").split("tick").pop();
-            thisCityGroup = d3.select("#bar" + thisCity).attr("class");
+            if (this_dim === "per GDP") {
+              junk = data_GHG.find(x => x.city.includes(d))['per GDP'];
+              if (! junk) console.log("d with no GDP: ", d)
+            }
 
-            if (this_dim === "per capita") {              
-              xscale=.6; yscale=1.8; rot=-65;
-              xtrans=44; ytrans=-55;
-             
-              fn_cityLabels_perCapita (d, i, thisCityGroup);
+            if (d.includes("gap")) return "";
+            // else if ()
+            else {
 
-            } else if (this_dim === "per GDP") {
-              xscale=.6; yscale=1.8; rot=-65; xtrans=44; ytrans=-55;
-              fn_cityLabels_perGDP (d, i, thisCityGroup);
+              thisCity = d3.select(this).attr("id").split("tick").pop();
+              thisCityGroup = d3.select("#bar" + thisCity).attr("class");
 
-            } //this_dim
+              if (this_dim === "per capita") {              
+                xscale=.6; yscale=1.8; rot=-65;
+                xtrans=44; ytrans=-55;
+               
+                fn_cityLabels_perCapita (d, i, thisCityGroup);
 
-            return d.includes("gap") ? "" : "scale(" + xscale + " " + yscale + ")" + 
-                      "translate(" + xtrans + " " + ytrans + ")" + "rotate(" + rot + ")" ;
+              } else if (this_dim === "per GDP") {
+
+                xscale=.6; yscale=1.8; rot=-65; xtrans=44; ytrans=-55;
+                fn_cityLabels_perGDP (d, i, thisCityGroup);
+
+              } //this_dim
+
+              // return d.includes("gap") ? "" : "scale(" + xscale + " " + yscale + ")" + 
+              //           "translate(" + xtrans + " " + ytrans + ")" + "rotate(" + rot + ")" ;
+
+
+               return  "scale(" + xscale + " " + yscale + ")" + 
+                        "translate(" + xtrans + " " + ytrans + ")" + "rotate(" + rot + ")" ;
+            }
+
           })
       .style("text-anchor", "start")  //"middle"
       // .style("fill", function (d) {
