--- a/index.html
+++ b/index.html
@@ -729,7 +729,7 @@ function emissionsBarChart(geogroup_name, geogroup_id) {
             } else if (this_dim === "per GDP") {
 
               if (d3.select("#reorderButton").text() === "Re-order") fn_cityLabels_perGDP(d, i, thisCityGroup);
-              else fn_cityLabels_perGDP_reordered(d, i, thisCityGroup);
+              else ytrans=-35;
 
             } //this_dim
            
