--- a/index.html
+++ b/index.html
@@ -296,7 +296,7 @@ d3.tsv("data/cityApp_attributes.tsv", function(ghg) {
 //console.log("dimExtentDict: ", dimExtentDict["methodology"])
 
 //barChart legends
-fn_appendColourBar();
+fn_barChartLegend();
 //fn_appendRegionalLine();
 
 // d3.csv("data/Creutzig2014_dataset_wb.csv", function(ghg) {
