barChart legend tooltip hidden for specified attrFlag

--- a/index.html
+++ b/index.html
@@ -296,7 +296,7 @@ d3.tsv("data/cityApp_attributes.tsv", function(ghg) {
 //console.log("dimExtentDict: ", dimExtentDict["methodology"])
 
 //barChart legends
-fn_barChartLegend();
+// fn_barChartLegend();
 //fn_appendRegionalLine();
 
 // d3.csv("data/Creutzig2014_dataset_wb.csv", function(ghg) {
@@ -307,6 +307,7 @@ d3.tsv("data/cityApp_attributes.tsv", function(ghg) {
   drawMap();
   emissionsBarChart("groupUSAAsia", "#barChart_USAAsia");
   emissionsBarChart("groupEUCWLatAmerAfrica", "#barChart_EUCWLatAmerAfrica");
+  fn_barChartLegend();
 
 });
 // //Customize some city names
