--- a/index.html
+++ b/index.html
@@ -186,6 +186,9 @@ window.onresize = function() {
 // Buttons
 // ----------------------------------------------------
 //Attribute dropdown button
+//Default to "Protocol"
+d3.select("#d3-dropdown").node().value = "methodology";
+
 d3.select("select")
   .on("change",function(d){
     attrFlag = d3.select("#d3-dropdown").node().value;
