disable GDP/capita option for now

--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@ pdf" target="_blank"> emissions </a> data, either per capita (default) or per un
             <select id="d3-dropdown">
               <option value="methodology" selected="selected">Protocol</option>
               <option value="population density">population density</option>
-              <option value="GDP/capita">GDP/capita</option>
+              <!--<option value="GDP/capita">GDP/capita</option>-->
               <!--<option value="gas price">gas price</option>
               <option value="diesel price">diesel price</option>
               <option value="HDD 15.5C">HDD 15.5C</option>
