--- a/index.html
+++ b/index.html
@@ -54,12 +54,12 @@ pdf" target="_blank"> emissions </a> data, either per capita (default) or per un
         <li id="resetButton">Reset</li>
       </ul>
 
-      <div class="col-lg-4" ></div>
+      <!-- <div class="col-lg-4" ></div> -->
     </div> <!-- ./row 1 -->
   
     <!-- row for map and city card -->
     <div class="row">
-      <div class="col-lg-12">
+      <div id="mapRow" class="col-lg-12">
         <div id="map"></div>
 
       </div>
@@ -69,7 +69,7 @@ pdf" target="_blank"> emissions </a> data, either per capita (default) or per un
     <!-- row 3 -->
     <div class="row">
 
-      <div class="col-lg-3">
+      <div class="col-lg-4">
           <div id="barChartLegendLabel">Colour bars by: 
             <select id="d3-dropdown">
               <option value="methodology" selected="selected">Protocol</option>
@@ -332,8 +332,11 @@ d3.tsv("data/cityApp_attributes.tsv", function(ghg) {
 
 // d3js World Map
 //------------------
-var width = 1000,
-    height = 360; //cut off antarctica  //400;
+var margin = {top: 0, right: 0, bottom: 0, left: 20};
+var width = 1200 - margin.left - margin.right,
+    height = 360 - margin.top - margin.bottom;
+// var width = 1000,
+//     height = 360; //cut off antarctica  //400;
 
 function drawMap() {
   // Map reset button
@@ -507,14 +510,20 @@ function drawMap() {
 } // ./drawMap()
 
 function highlightElements(idName) {
+  console.log("idName: ", idName)
+
   // clear any previous story first
   d3.select("#ghgStory").text("");
 
   var selectedCity = data_GHG.find(x => x.idName.includes(idName));
-  
+
   //Clear Previous
   //--------------
   resetElements();
+  d3.select("#cityCardg").remove();
+
+  //Display city card
+  fn_svgCityCard (selectedCity.city);
 
   //Highlight Current
   //-----------------
