WIP contd: some subrows

--- a/index.html
+++ b/index.html
@@ -523,7 +523,7 @@ function highlightElements(idName) {
   d3.select("#cityCardg").remove();
 
   //Display city card
-  fn_svgCityCard (selectedCity.city);
+  fn_svgCityCard (selectedCity);
 
   //Highlight Current
   //-----------------
