--- a/index.html
+++ b/index.html
@@ -419,7 +419,6 @@ function drawMap() {
    
     d3.json("geojson/cities_edited2.geojson", function(error, cities) {
       if (error) throw error;
-      console.log(cities)
 
       //world countries
       svg.append("g")
@@ -463,12 +462,12 @@ function drawMap() {
           })
           .attr("class", "worldcity")
           .style("fill", function (d) {
-            if (d.id === "Cleveland") console.log("cleveland: ", d)
-            if (data_GHG.find(x => x.city === d.id)) {
-              console.log("x in fill: ", d)
-              console.log("x.id in fill: ", d.id)
-              console.log("find: ", data_GHG.find(x => x.city === d.id))
-            }
+            // if (d.id === "Cleveland") console.log("cleveland: ", d)
+            // if (data_GHG.find(x => x.city === d.id)) {
+            //   console.log("x in fill: ", d)
+            //   console.log("x.id in fill: ", d.id)
+            //   console.log("find: ", data_GHG.find(x => x.city === d.id))
+            // }
 
             if (data_GHG.find(x => x.city === d.id)) {
               return regionColourMap[data_GHG.find(x => x.city === d.id).region];
