--- a/index.html
+++ b/index.html
@@ -773,8 +773,13 @@ function emissionsBarChart(geogroup_name, geogroup_id) {
       // })
       .on("touchmove mousemove", function (d) {
         fn_enlargeName(geogroup_name, d);
+
+        idName = format_idName(d);
+        highlightElements(idName);
       })
       .on("mouseout", function (d) {
+        resetElements();
+
         d3.select("#tick" + idName).text(function (d) { return fn_abbr(d); })
           .style("font-size", "16px").style("opacity", 0.3);
       });
